--- a/www/kerbit/client/main.css
+++ b/www/kerbit/client/main.css
@@ -1,11 +1,18 @@
 /* CSS declarations go here */
 
-/* Global Styles */
+html {
+    position: relative; /* Sticky footer stuff */
+    min-height: 100%; /* Sticky footer stuff */
+}
 
 body {
-    /*padding-top: 50px; Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-    font-family: "Lato", "sans-serif", "Helvetica";
+    /*padding-top: 50px;*/
     font-weight: bold;
+    margin-bottom: 30px; /* Footer height */
+}
+
+.body-padded50 {
+    padding-top: 50px;
 }
 
 .nav > li > a {
@@ -100,22 +107,24 @@ body {
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
 }
 
-
-/* Featurettes
-------------------------- */
-
-.featurette-divider {
-  margin: 40px 0; /* Space out the Bootstrap <hr> more */
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color: #fff;
 }
 
-/* Thin out the marketing headings */
+.featurette-divider {
+  margin: 40px 0;
+}
+
 .featurette-heading {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
 }
 
-/* Responsive Styles */
 @media(max-width:767px) {
     .img-portfolio {
         margin-bottom: 10px;
