Created JS files to allow pages to render

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -36,7 +36,7 @@
                     </li>
                     <li>
                         <p class="navbar-btn">
-                            <a href="#" class="btn btn-default">Log-in</a>
+                            <a href="/login" class="btn btn-default">Log-in</a>
                         </p>
                     </li>
                     <li>
