--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -36,12 +36,12 @@
                     </li>
                     <li>
                         <p class="navbar-btn">
-                            <a href="/login" class="btn btn-default">Log-in</a>
+                            <a href="/sign-in" class="btn btn-default">Log-in</a>
                         </p>
                     </li>
                     <li>
                         <p class="navbar-btn">
-                            <a href="/register" class="btn btn-default btn-f35b68">Sign-up</a>
+                            <a href="/sign-up" class="btn btn-default btn-f35b68">Sign-up</a>
                         </p>
                     </li>
                 </ul>
