[PB] Style changes, fixed duplicate body, fixed icon structure

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -3,7 +3,7 @@
         <title>KERB.IT</title>
         <script src="https://use.fontawesome.com/658eff4761.js"></script>
         <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-        <link rel="shortcut icon" href="/test/van.ico">
+        <link rel="shortcut icon" href="/van.ico">
     </head>
 </template>
 
