--- a/www/kerbit/client/main.css
+++ b/www/kerbit/client/main.css
@@ -6,18 +6,11 @@ html {
 }
 
 body {
-    /*padding-top: 50px;*/
+    padding-top: 50px;
     font-weight: bold;
     margin-bottom: 30px; /* Footer height */
 }
 
-.body-padded50 {
-    padding-top: 50px;
-}
-
-.body-extra {
-    padding-top: 300px;
-}
 .nav > li > a {
 	padding-left: 10px;
 	padding-right: 10px;
@@ -37,13 +30,14 @@ body {
 }
 
 #mainNav {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 1); /* Transparency setting */
 }
 
 .btn-f35b68 {
 	  color: #fff;
 	  background-color: #f35b68;
-	  border-color: #c24853; }
+	  border-color: #c24853;
+}
 .btn-f35b68:focus,
 .btn-f35b68.focus {
   color: #fff;
@@ -67,24 +61,12 @@ body {
 	 border-color: #301214;
 }
 
-.img-portfolio {
-    margin-bottom: 20px;
-}
-.img-hover:hover {
-    opacity: 0.8;
-}
-
-/* 404 Page Styles */
-
-.error-404 {
-    font-size: 100px;
-}
-
 .intro-header {
+    padding-top: 0px;
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url("/test/truck.jpg") no-repeat center center;
+    background: url("/truck.jpg") no-repeat center center;
     background-size: cover;
 }
 
@@ -128,8 +110,4 @@ body {
   letter-spacing: -1px;
 }
 
-@media(max-width:767px) {
-    .img-portfolio {
-        margin-bottom: 10px;
-    }
-}
+/* OTHER RESOLUTIONS NEED TO BE ADDED (OTHER FILES) */
