--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -36,12 +36,7 @@
                     </li>
                     <li>
                         <p class="navbar-btn">
-                            <a href="/sign-in" class="btn btn-default">Log-in</a>
-                        </p>
-                    </li>
-                    <li>
-                        <p class="navbar-btn">
-                            <a href="/sign-up" class="btn btn-default btn-f35b68">Sign-up</a>
+                            {{> atNavButton}} <!-- EXPERIMENTAL -->
                         </p>
                     </li>
                 </ul>
