[PB] Left commented-out non-reactive navbar buttons in code for future use

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -34,6 +34,16 @@
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
+                    <!--<li>
+                        <p class="navbar-btn">
+                            <a href="/login" class="btn btn-default">Sign-in</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p class="navbar-btn">
+                            <a href="/register" class="btn btn-default btn-f35b68">Sign-up</a>
+                        </p>
+                    </li>-->
                     <li>
                         <p class="navbar-btn">
                             {{> atNavButton}} <!-- EXPERIMENTAL -->
