[PB] Map JS added, Mongo database created client side on Meteor start, Request page skeleton added

--- a/www/kerbit/client/main.css
+++ b/www/kerbit/client/main.css
@@ -39,6 +39,12 @@ body {
     margin: 0px;
 }
 
+.map-container {
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
+}
+
 .btn-f35b68 {
 	  color: #fff;
 	  background-color: #f35b68;
