--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -29,10 +29,13 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="/request">Request pickup</a>
+                        <a class="page-scroll" href="/about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href="/services">Services</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="/request">Request pickup</a>
                     </li>
                     <!--<li>
                         <p class="navbar-btn">
