--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -28,9 +28,14 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    {{#if currentUser}}
                     <li>
                         <a class="page-scroll" href="/request">Request pickup</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/my-requests">My requests</a>
+                    </li>
+                    {{/if}}
                     <li>
                         <a class="page-scroll" href="#services">Services</a>
                     </li>
