Add 'Home' button for signed in drivers

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -28,6 +28,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
+                    {{#if currentUserIsDriver}}
+                    <li>
+                        <a class="page-scroll" href="/home">Home</a>
+                    </li>
+                    {{/if}}
                     {{#if currentUser}}
                     <li>
                         <a class="page-scroll" href="/my-requests">My requests</a>
