Add route and import for myOffers

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -32,6 +32,9 @@
                     <li>
                         <a class="page-scroll" href="/home">Home</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="/my-offers">My offers</a>
+                    </li>
                     {{/if}}
                     {{#if currentUser}}
                     <li>
