--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -30,7 +30,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     {{#if currentUserIsDriver}}
                     <li>
-                        <a class="page-scroll" href="/home">Home</a>
+                        <a class="page-scroll" href="/makeOffers">Make Offers</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="/my-offers">My offers</a>
