Make all template files camelCased, but all links hyphenated

--- a/www/kerbit/imports/ui/components/header.html
+++ b/www/kerbit/imports/ui/components/header.html
@@ -30,18 +30,18 @@
                 <ul class="nav navbar-nav navbar-right">
                     {{#if currentUserIsDriver}}
                     <li>
-                        <a class="page-scroll" href="/makeOffers">Make Offers</a>
+                        <a class="page-scroll" href="/make-offers">Make Offers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/my-offers">My offers</a>
+                        <a class="page-scroll" href="/my-offers">My Offers</a>
                     </li>
                     {{/if}}
                     {{#if currentUser}}
                     <li>
-                        <a class="page-scroll" href="/my-requests">My requests</a>
+                        <a class="page-scroll" href="/my-requests">My Requests</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/request">Request pickup</a>
+                        <a class="page-scroll" href="/request-pickup">Request Pickup</a>
                     </li>
                     {{/if}}
                     <li>
