--- a/www/kerbit/client/main.css
+++ b/www/kerbit/client/main.css
@@ -39,10 +39,24 @@ body {
     margin: 0px;
 }
 
-.map-container {
+#map-container {
     width: 500px;
     height: 500px;
     border: 1px solid black;
+    position: relative;
+}
+
+#map-container:after {
+    width: 22px;
+    height: 40px;
+    display: block;
+    content: ' ';
+    position: absolute;
+    top: 50%; left: 50%;
+    margin: -40px 0 0 -11px;
+    background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
+    background-size: 22px 40px;
+    pointer-events: none;
 }
 
 .btn-f35b68 {
