--- a/www/kerbit/imports/ui/layouts/dash-layout.html
+++ b/www/kerbit/imports/ui/layouts/dash-layout.html
@@ -1,5 +1,7 @@
 <template name="DashLayout">
     {{>page_header}}
+    {{>nav_bar}}
     {{>Template.dynamic template=main}}
+    {{>side_bar}}
     {{>footer}}
 </template>
