--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -1,16 +1,93 @@
 <template name="side_bar">
-    <div id="wrapper">
+     <!-- Left side column. contains the sidebar -->
+  <aside class="main-sidebar">
+    <!-- sidebar: style can be found in sidebar.less -->
+    <section class="sidebar">
+      <!-- Sidebar user panel -->
+      <div class="user-panel">
+        <div class="pull-left image">
+          <img src="https://randomuser.me/api/portraits/men/46.jpg" class="img-circle" alt="User Image">
+        </div>
+        <div class="pull-left info">
+           <p> Welcome Back, </p>
+          <p>{{fullName}}</p>
+
+        </div>
+      </div>
+
+      <!-- sidebar menu: : style can be found in sidebar.less -->
+      <ul class="sidebar-menu">
+        <li class="header">MAIN NAVIGATION</li>
+        <li>
+          <a href="#">
+            <i class="fa fa-dashboard"></i> <span>Account Settings</span>
+          </a>
+        </li>
+          {{#if currentUserIsDriver}}
+              <li>
+                  <a class="page-scroll" href="/make-offers">Make Offers</a>
+              </li>
+              <li>
+                  <a class="page-scroll" href="/my-offers">My Offers</a>
+              </li>
+          {{/if}}
+          {{#unless currentUserIsDriver}}
+              <li>
+                  <a class="page-scroll" href="/my-requests">My Requests</a>
+              </li>
+              <li>
+                  <a class="page-scroll" href="/request-pickup">Request Pickup</a>
+              </li>
+          {{/unless}}
+        <li>
+          <a href="#">
+            <i class="fa fa-files-o"></i>
+            <span>Layout Options</span>
+            <span class="label label-primary pull-right">4</span>
+          </a>
+          <ul>
+            <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
+            <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
+            <li class="active"><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
+            <li><a href="collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+          </ul>
+        </li>
+
+
+        <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+        <li class="header">LABELS</li>
+        <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
+        <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
+        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+      </ul>
+    </section>
+    <!-- /.sidebar -->
+      </aside>
+</template>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<template name="spare_side_bar">
 
         <!-- Sidebar -->
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
-                <li class="sidebar-brand">
-                    <a href="#">
-                        Start Bootstrap
-                    </a>
-                </li>
+
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#"><h1>Welcome {{currentUser.profile.first_name}}</h1></a>
                 </li>
                 <li>
                     <a href="#">Shortcuts</a>
@@ -27,9 +104,7 @@
                 <li>
                     <a href="#">Services</a>
                 </li>
-                <li>
-                    <a href="#">Contact</a>
-                </li>
+
     {{#if currentUserIsDriver}}
         <li>
             <a class="page-scroll" href="/make-offers">Make Offers</a>
@@ -49,6 +124,6 @@
             </ul>
         </div>
         <!-- /#sidebar-wrapper -->
-        </div>
+
 
 </template>
