--- a/www/kerbit/imports/ui/layouts/dash-layout.html
+++ b/www/kerbit/imports/ui/layouts/dash-layout.html
@@ -1,7 +1,19 @@
 <template name="DashLayout">
     {{>page_header}}
     {{>nav_bar}}
-    {{>Template.dynamic template=main}}
+    <div id="wrapper">
     {{>side_bar}}
+    <div id="page-content-wrapper">
+        <div class="page-content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+    {{>Template.dynamic template=main}}
+        </div>
+        </div>
+         </div>
+        </div>
+        </div>
+        </div>
     {{>footer}}
 </template>
