--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -19,7 +19,7 @@
       <ul class="sidebar-menu">
         <li class="header">MAIN NAVIGATION</li>
         <li>
-          <a href="#">
+          <a href="/settings">
             <i class="fa fa-dashboard"></i> <span>Account Settings</span>
           </a>
         </li>
