Move authorization to the template level and implement redirect for the home link, but something is broken when displaying restricted pages

--- a/www/kerbit/imports/ui/layouts/home-layout.html
+++ b/www/kerbit/imports/ui/layouts/home-layout.html
@@ -1,6 +1,8 @@
 <template name="HomeLayout">
+  {{#if redirect}}
     {{>page_header}}
     {{>nav_bar}}
     {{>Template.dynamic template=main}}
     {{>footer}}
+  {{/if}}
 </template>
