--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -6,7 +6,7 @@
       <!-- Sidebar user panel -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="https://randomuser.me/api/portraits/men/46.jpg" class="img-circle" alt="User Image">
+          <img src="/random_tom.jpg" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
           <p> Welcome Back, </p>
