--- a/kerbit/kerbit/Base.lproj/Main.storyboard
+++ b/kerbit/kerbit/Base.lproj/Main.storyboard
@@ -76,10 +76,10 @@
             </objects>
             <point key="canvasLocation" x="316.5" y="365.5"/>
         </scene>
-        <!--View Controller-->
+        <!--TestVC-->
         <scene sceneID="Z4K-iu-5RV">
             <objects>
-                <viewController id="8CQ-g4-sxu" sceneMemberID="viewController">
+                <viewController id="8CQ-g4-sxu" customClass="TestVC" customModule="kerbit" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="NMO-W1-7s4"/>
                         <viewControllerLayoutGuide type="bottom" id="UIC-1E-o7T"/>
@@ -110,7 +110,7 @@
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ahW-96-aKn">
                                 <rect key="frame" x="38" y="274" width="299" height="31"/>
                             </slider>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Aq-uR-sPb">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Postcode" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7Aq-uR-sPb">
                                 <rect key="frame" x="136.5" y="228" width="102" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="102" id="HVc-cJ-OaH"/>
@@ -118,13 +118,12 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="hqj-hy-fVW">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Description" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hqj-hy-fVW">
                                 <rect key="frame" x="63" y="368" width="248" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="3j9-GF-ADo"/>
                                 </constraints>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -139,6 +138,7 @@
                                 <rect key="frame" x="163" y="591" width="49" height="30"/>
                                 <state key="normal" title="Submit"/>
                                 <connections>
+                                    <action selector="didSubmitForm" destination="FJE-bM-mfC" eventType="touchUpInside" id="CDN-4e-7zF"/>
                                     <segue destination="8KL-Ve-Gk8" kind="show" id="GHw-wW-1Yg"/>
                                 </connections>
                             </button>
@@ -166,6 +166,13 @@
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="_description" destination="hqj-hy-fVW" id="3T8-px-gCi"/>
+                        <outlet property="bidWindow" destination="ahW-96-aKn" id="nq2-rh-MAY"/>
+                        <outlet property="imageView" destination="Mq8-fA-pRN" id="LS9-ce-nqj"/>
+                        <outlet property="postcode" destination="7Aq-uR-sPb" id="Ah3-aY-MO7"/>
+                        <outlet property="sizeRequired" destination="9Ph-i6-pzK" id="64E-7K-jdS"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I1e-yG-KJL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
