Separate map into driver and consumer.

--- a/www/kerbit/client/stylesheets/map.css
+++ b/www/kerbit/client/stylesheets/map.css
@@ -5,7 +5,7 @@
     position: relative;
 }
 
-#map-container:after {
+#map-container.request-pickup:after {
     width: 22px;
     height: 40px;
     display: block;
