--- a/kerbit/kerbit/Base.lproj/Main.storyboard
+++ b/kerbit/kerbit/Base.lproj/Main.storyboard
@@ -139,7 +139,7 @@
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="didSubmitForm" destination="FJE-bM-mfC" eventType="touchUpInside" id="CDN-4e-7zF"/>
-                                    <segue destination="8KL-Ve-Gk8" kind="show" id="GHw-wW-1Yg"/>
+                                    <segue destination="TZJ-Ez-s8z" kind="show" id="N0n-hD-ueD"/>
                                 </connections>
                             </button>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="9Ph-i6-pzK">
@@ -179,80 +179,23 @@
             <point key="canvasLocation" x="1148.5" y="365.5"/>
         </scene>
         <!--My RequestsVC-->
-        <scene sceneID="ECa-7m-UaE">
+        <scene sceneID="DPh-yi-rDk">
             <objects>
-                <viewController id="8KL-Ve-Gk8" customClass="MyRequestsVC" customModule="kerbit" sceneMemberID="viewController">
+                <viewController id="TZJ-Ez-s8z" customClass="MyRequestsVC" customModule="kerbit" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="slo-n1-nFF"/>
-                        <viewControllerLayoutGuide type="bottom" id="uAK-1o-qfn"/>
+                        <viewControllerLayoutGuide type="top" id="UHS-1J-BY0"/>
+                        <viewControllerLayoutGuide type="bottom" id="pLf-0p-rED"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="mMX-Pu-3bO">
+                    <view key="view" contentMode="scaleToFill" id="XBg-Pr-iLE">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A4Z-Mv-vWF">
-                                <rect key="frame" x="29" y="284" width="317" height="99"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KQG-bm-Ot3">
-                                        <rect key="frame" x="8" y="12" width="72" height="76"/>
-                                    </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$65" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W70-IE-p3r">
-                                        <rect key="frame" x="260" y="39" width="32" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Company Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXM-7I-8bH">
-                                        <rect key="frame" x="102" y="12" width="123" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Metric" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4UP-Xp-N1N">
-                                        <rect key="frame" x="139" y="41" width="49" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="99" id="kUf-Dj-fQT"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VjN-g4-CBg">
-                                <rect key="frame" x="163" y="28" width="48" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="VjN-g4-CBg" firstAttribute="top" secondItem="slo-n1-nFF" secondAttribute="bottom" constant="8" id="Nod-V7-qz2"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="centerY" secondItem="mMX-Pu-3bO" secondAttribute="centerY" id="RYH-FB-qIg"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="centerX" secondItem="mMX-Pu-3bO" secondAttribute="centerX" id="Uf2-in-Sz2"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="leading" secondItem="mMX-Pu-3bO" secondAttribute="leadingMargin" constant="13" id="XmX-W5-J2i"/>
-                            <constraint firstItem="VjN-g4-CBg" firstAttribute="centerY" secondItem="mMX-Pu-3bO" secondAttribute="centerY" id="Ys0-Ui-62Y"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="top" secondItem="VjN-g4-CBg" secondAttribute="bottom" constant="74" id="aw3-PS-7LS"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="centerY" secondItem="mMX-Pu-3bO" secondAttribute="centerY" id="dMl-Pg-vSl"/>
-                            <constraint firstItem="VjN-g4-CBg" firstAttribute="centerX" secondItem="mMX-Pu-3bO" secondAttribute="centerX" id="kLE-UG-OKc"/>
-                            <constraint firstItem="A4Z-Mv-vWF" firstAttribute="centerX" secondItem="mMX-Pu-3bO" secondAttribute="centerX" id="tp4-oJ-8io"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Ys0-Ui-62Y"/>
-                                <exclude reference="aw3-PS-7LS"/>
-                                <exclude reference="dMl-Pg-vSl"/>
-                                <exclude reference="tp4-oJ-8io"/>
-                            </mask>
-                        </variation>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FQp-tx-lhz" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cU3-yN-gxt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1572.5" y="365.5"/>
+            <point key="canvasLocation" x="1603.5" y="365.5"/>
         </scene>
         <!--Pickup LocationVC-->
         <scene sceneID="Ujs-Bg-zEq">
