--- a/www/kerbit/imports/ui/components/footer.html
+++ b/www/kerbit/imports/ui/components/footer.html
@@ -1,7 +1,30 @@
-<template name="footer">
+<template name="Footer">
     <footer class="footer">
         <div class="container">
             <p class="text-muted text-center">Copyright <i class="fa fa-copyright fa-fw"></i> 2016 | <a href="#">Terms</a> | <a href="#">Privacy</a> </p>
         </div>
     </footer>
+</template>
+
+<template name="footer">
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s12">
+              <textarea id="feedback" class="materialize-textarea white-text"
+                style="border-bottom: 1px solid #ffffff;"></textarea>
+              <label for="feedback" class="white-text">Help Us Improve With Feedback</label>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      © Copyright Kerb.It team
+      </div>
+    </div>
+  </footer>
 </template>
