--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -1,4 +1,4 @@
-<template name="side_bar">
+<template name="Side_bar">
      <!-- Left side column. contains the sidebar -->
   <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
@@ -34,65 +34,18 @@
   </aside>
 </template>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<template name="spare_side_bar">
-
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <ul class="sidebar-nav">
-
-                <li>
-                    <a href="#"><h1>Welcome {{currentUser.profile.first_name}}</h1></a>
-                </li>
-                <li>
-                    <a href="#">Shortcuts</a>
-                </li>
-                <li>
-                    <a href="#">Overview</a>
-                </li>
-                <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-
-    {{#if currentUserIsDriver}}
-        <li>
-            <a class="page-scroll" href="/make-offers">Make Offers</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="/my-offers">My Offers</a>
-        </li>
-    {{/if}}
-    {{#if currentUser}}
-        <li>
-            <a class="page-scroll" href="/my-requests">My Requests</a>
-        </li>
-        <li>
-            <a class="page-scroll" href="/request-pickup">Request Pickup</a>
-        </li>
-    {{/if}}
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-
-
+<template name="side_bar">
+  <nav>
+    <ul class="right hide-on-med-and-down">
+      {{#each groupRoutes}}
+      <li><a href="{{path}}">{{name}}</a></li>
+      {{/each}}
+    </ul>
+    <ul id="slide-out" class="side-nav">
+      {{#each groupRoutes}}
+      <li><a href="{{path}}">{{name}}</a></li>
+      {{/each}}
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+  </nav>
 </template>
