--- a/www/kerbit/imports/ui/components/sidebar.html
+++ b/www/kerbit/imports/ui/components/sidebar.html
@@ -34,7 +34,7 @@
   </aside>
 </template>
 
-<template name="side_bar">
+<template name="Sidebar">
   <nav>
     <ul class="right hide-on-med-and-down">
       {{#each groupRoutes}}
