--- a/www/kerbit/imports/ui/layouts/dash-layout.html
+++ b/www/kerbit/imports/ui/layouts/dash-layout.html
@@ -1,8 +1,8 @@
 <template name="DashLayout">
-  {{>page_header}}
-  {{>nav_bar}}
+  {{>PageHeader}}
+  {{>Navbar}}
     <div id="wrapper">
-      {{>side_bar}}
+      {{>Sidebar}}
       <div id="page-content-wrapper">
         <div class="page-content">
           <div class="container">
@@ -15,5 +15,5 @@
         </div>
       </div>
     </div>
-    {{>footer}}
+    {{>Footer}}
 </template>
